Closed
Bug 1586992
Opened 4 years ago
Closed 4 years ago
MIPS: Segmentation fault in branchSub32 on start up on MIPS platform.
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla71
Tracking | Status | |
---|---|---|
firefox71 | --- | fixed |
People
(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:69.0) Gecko/20100101 Firefox/69.0
Steps to reproduce:
Compile the JS program, and run it on MIPS platform.
Actual results:
Get segmentation fault on start up.
Debug in gdb: gdb obj-release/js, get:
Program received signal SIGSEGV, Segmentation fault.
branchSub32<js::jit::Imm32> (this=<optimized out>, cond=js::jit::AssemblerMIPSShared::Signed,
src=..., dest=..., overflow=<optimized out>)
at /home/zjz/disk/firefox-central/js/src/jit/mips-shared/MacroAssembler-mips-shared-inl.h:517
517 MOZ_CRASH("NYI");
Expected results:
The JS program should start normally
Assignee | ||
Comment 1•4 years ago
|
||
Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/708c71a54bb8 [MIPS] Add branch condition '{Not}Signed' in branchSub32. r=jandem
Updated•4 years ago
|
Priority: -- → P1
Comment 3•4 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Updated•4 years ago
|
Assignee: nobody → zhaojiazhong-hf
You need to log in
before you can comment on or make changes to this bug.
Description
•